<resources>
    <string name="app_name">DCMS</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="instruction_for_you">Instruction For You</string>
    <string name="here_is_the_instruction_please_go_through_this_first">Here is the instruction please go through this first…</string>
    <string name="attempt">House Hold Visit</string>
    <string name="today_s_task">Today\'s Task</string>
    <string name="text_message">Text message</string>
    <string name="call">Calls</string>
    <string name="data_collection">Data Collection</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="add_household">Add Household</string>
    <string name="village">Village</string>
    <string name="name">Name</string>
    <string name="mobile_type">Mobile Type</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="mother_name">Mother Name</string>
    <string name="document_number">Document Number</string>
    <string name="ward">Ward</string>
    <string name="please_allow_all_above_permission">Please Allow Above permission</string>
    <string name="view_entries">View Entries</string>
    <string name="done">Complete</string>
    <string name="registration">Registration</string>
    <string name="house_no">House no</string>
    <string name="please_select_a_image">Please select a Image</string>
    <string name="not_enabled_right_now">Not enabled Right now</string>
    <string name="please_wait">Please Wait</string>
    <string name="log_out_message">You have successfully Logout</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="house_hold_list">House Hold List</string>
    <string name="whatsapp_msg">Whatsapp Message Sent</string>
    <string name="text_msg">Text Message Sent</string>
    <string name="call_report">Calls Reports</string>
    <string name="house_hold_visit">House Hold Visited</string>
    <string name="mobile_num_empty">Mobile number is empty</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="enter_correct_mobile_number">Enter correct mobile number</string>
    <string name="register">Register</string>
    <string name="profile_information">Profile Information</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="new_password_mismatch">New password mismatch</string>
    <string name="please_login">Please Login</string>
    <string name="confirm_pass_is_empty">Confirm password is empty</string>
    <string name="new_pass_is_empty">New password is empty</string>
    <string name="old_pass_is_empty">Old password is empty</string>
    <string name="registered_mobile_no">Registered Mobile No</string>
    <string name="proceed">Proceed</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_connect_with_internet">Please Connect with internet</string>
    <string name="we_have_sent_otp_to_your_phone">We have sent OTP to your phone</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="message_sent">Message send</string>
    <string name="please_wait_message_template_not_received">Please wait Message Template Not Received</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="question_session">Question Session</string>
    <string name="verification_please_upload_user_image">Verification Please upload User Image</string>
    <string name="select_image">Select Image</string>
    <string name="upload">Upload</string>
    <string name="today_s_message">Today\'s Message</string>
    <string name="sent_to">Sent to</string>
    <string name="send_whatsapp">Send Whatsapp</string>
    <string name="choose_language">Choose Language / भाषा चुनें</string>
    <string name="hindi">Hindi</string>
    <string name="urdu">Urdu</string>
    <string name="english">English</string>
    <string name="sent_to_all">Sent To All</string>
    <string name="start">START</string>
    <string name="change_langua">Change Language</string>
    <string name="select_from_date">Select From Date</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="get_result">Get Result</string>
    <string name="please_select_from_date">Please select from date</string>
    <string name="please_select_to_date">Please select to date</string>
    <string name="no_report_found">No report found</string>
    <string name="theme_name">Theme Name:-</string>
    <string name="whatsapp_no">WhatsApp No:-</string>
    <string name="qreport">QReport</string>
    <string name="mobile">Mobile</string>
    <string name="whatsapp_number">Whatsapp Number</string>
    <string name="landmark">Landmark</string>
    <string name="document_type">Document Type</string>
    <string name="father_name">Father Name</string>
    <string name="image">image</string>
    <string name="submit">Submit</string>
    <string name="Modify">Modify</string>

</resources>
