<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/containerAppBar"
                layout="@layout/app_title_bar" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedWardNo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/ward"
                app:layout_constraintTop_toBottomOf="@+id/village_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/wardPop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nuntio_regular"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/name"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextWardNo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/namePop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nuntio_regular" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedMobile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/mobile"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobilePop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nuntio_regular"
                    android:inputType="phone"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedWhatsapp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/whatsapp_number"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextMobile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/whatsappPop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nuntio_regular"
                    android:inputType="phone"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/email"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextType">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailPop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nuntio_regular" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedAddress"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/house_no"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressPop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nuntio_regular" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedLandMark"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/landmark"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextAddress">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/landmarkPop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nuntio_regular" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedDocumentType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/document_type"
                app:layout_constraintTop_toBottomOf="@+id/outlinedLandMark"
                tools:layout_editor_absoluteX="20dp"
                tools:visibility="visible">

                <AutoCompleteTextView
                    android:id="@+id/document_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nuntio_regular"
                    android:inputType="none" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedDocumentNumberPop"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/document_number"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextDocumentType">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/document_numberPop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nuntio_regular" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedFather"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/father_name"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextDocumentNumber"
                tools:layout_editor_absoluteX="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fatherPop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nuntio_regular" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedMother"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/mother_name"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextFather">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/motherPop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nuntio_regular" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/image_selector_pop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/select_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/outlinedMother" />


            <ImageView
                android:id="@+id/image_pop"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/image"
                app:layout_constraintStart_toEndOf="@id/image_selector_pop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#FF4444"
                    android:text="Cancel"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/updateBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#FF4444"
                    android:text="UPDATE"
                    app:cornerRadius="10dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>