<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    android:elevation="5dp">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/containerAppBar"
                layout="@layout/app_title_bar" />


            <TextView
                android:id="@+id/viewEntries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/nuntio_bold"
                android:padding="5dp"
                android:text="@string/view_entries"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/seeAddedHouseHoldTv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/border_textview"
                android:drawableLeft="@drawable/ic_house"
                android:drawableRight="@drawable/ic_arrows"
                android:drawablePadding="4dp"
                android:fontFamily="@font/nuntio_regular"
                android:inputType="none"
                android:padding="10dp"
                android:paddingVertical="8dp"
                android:text="@string/house_hold_list"
                android:textColor="#333"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/seeWAReportDetailActionBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/border_textview"
                android:drawableLeft="@drawable/ic_icons8_whatsapp"
                android:drawableRight="@drawable/ic_arrows"
                android:drawablePadding="4dp"
                android:fontFamily="@font/nuntio_regular"
                android:padding="10dp"
                android:text="@string/whatsapp_msg"
                android:textColor="#333"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/seeTextReportDetailActionBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/border_textview"
                android:drawableLeft="@drawable/ic_baseline_send_24"
                android:drawableRight="@drawable/ic_arrows"
                android:drawablePadding="4dp"
                android:fontFamily="@font/nuntio_regular"
                android:padding="10dp"
                android:text="@string/text_msg"
                android:textColor="#333"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/callReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/border_textview"
                android:drawableLeft="@drawable/ic_call_icon"
                android:drawableRight="@drawable/ic_arrows"
                android:drawablePadding="4dp"
                android:fontFamily="@font/nuntio_regular"
                android:padding="10dp"
                android:text="@string/call_report"
                android:textColor="#333"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/seeQReportDetailActionBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/border_textview"
                android:drawableLeft="@drawable/ic_home"
                android:drawableRight="@drawable/ic_arrows"
                android:drawablePadding="4dp"
                android:fontFamily="@font/nuntio_regular"
                android:padding="10dp"
                android:paddingBottom="8dp"
                android:text="@string/house_hold_visit"
                android:textColor="#333"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>
</layout>