<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/filedContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/containerAppBar"
                layout="@layout/app_title_bar" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/changePasswordOldPass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/corner_8dp_with_border"
                android:fontFamily="@font/nuntio_bold"
                android:hint="@string/old_password"
                android:padding="8dp"
                android:textColor="#323232" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/changePasswordNewPass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/corner_8dp_with_border"
                android:fontFamily="@font/nuntio_bold"
                android:hint="@string/new_password"
                android:padding="8dp"
                android:textColor="#323232" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/changePasswordConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/corner_8dp_with_border"
                android:fontFamily="@font/nuntio_bold"
                android:hint="@string/confirm_password"
                android:padding="8dp"
                android:textColor="#323232" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/changePasswordActionBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="24dp"
                android:background="@drawable/corner_16dp_without_border"
                android:backgroundTint="@android:color/holo_red_dark"
                android:fontFamily="@font/nuntio_bold"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>
</layout>